--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,8 @@ dependencies:
   font_awesome_flutter: ^9.1.0
   fab_circular_menu: ^1.0.2
   direct_select_flutter: ^1.1.1
+  convex_bottom_bar: ^3.0.0
+  fl_chart: ^0.40.0
 
 
 
